--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 <hr>
 <h2>Contato</h2>
   <ul>
-    <h3><li>Telefone : 983237231</li></h3>
-    <h3><li>Gmail : youngvaldimir@gmail.com</li></</h3>
+    <h3><li>Telefone : zzz</li></h3>
+    <h3><li>Gmail : hatzecontato@gmail.com</li></</h3>
     <hr>
 <form class="" action="mailto:hatzecontato@gmail.com" method="post">
 <table>
